--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,28 @@
   color: #61dafb;
 }
 
+.jumbotron {
+  background: rgb(238, 237, 237);
+  padding: 100px 0;
+  background-image: url("./background.jpg");
+  background-size: cover;
+  color: white;
+}
+
+.jumbotron p {
+  font-size: 18px;
+}
+
+.jumbotron button {
+  width: 130px;
+  height: 50px;
+  background-color: rgb(37, 104, 228);
+  color: white;
+  border-radius: 5px;
+  border-style: none;
+  font-size: 20px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
