--- a/src/Components/Detail.scss
+++ b/src/Components/Detail.scss
@@ -1,5 +1,14 @@
 $main_color: #ff0000;
 
+.wow-enter {
+  opacity: 0;
+}
+
+.wow-enter-active {
+  opacity: 1;
+  transition: all 3000ms;
+}
+
 .red {
   color: #ff0000;
 }
